# Zenyatta

./: .dockerignore  .gitignore  Dockerfile  README.md  Zenyatta.py  docker-compose.yml  matplotlibrc  pyproject.toml  requirements.txt
cogs/Admin/: admin.py
cogs/Fun/: fun.py
cogs/General/: __init__.py  general.py  menus.py  views.py
cogs/Overwatch/: overwatch.py
cogs/Poll/: poll.py  views.py
cogs/SeaofThieves/: __init__.py  chat_wheel.json  menus.py  seaofthieves.py  views.py
cogs/utils/: gifs.py
